<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_type</name>
  <version>0.1.0</version> <!-- Updated version number -->
  <description>ROS 2 package for controlling a robot</description> <!-- Updated package description -->
  <maintainer email="debanikroy92@gmail.com">dj</maintainer>
  <license>MIT</license> <!-- Updated license declaration -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend> <!-- Added dependency on rclcpp -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
